<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    tools:context="com.cnst.wisdom.ui.activity.LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_marginTop="30dp"
                android:scaleType="fitCenter"
                android:src="@drawable/applogo"
                />

            <LinearLayout
                android:id="@+id/ll_input"
                android:layout_width="match_parent"
                android:layout_height="97dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/login_input_border"
                android:orientation="vertical"
                >

                <EditText
                    android:id="@+id/editText_user"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="@dimen/marging_8"
                    android:hint="@string/user_input"
                    android:inputType="text"
                    android:maxLength="32"
                    android:padding="@dimen/marging_8"
                    android:textColor="@color/normal_text"
                    android:textSize="@dimen/login_text"


                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    />

                <EditText
                    android:id="@+id/editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="@dimen/marging_8"
                    android:hint="@string/pwd_input"
                    android:inputType="textPassword"
                    android:maxLength="32"
                    android:padding="@dimen/marging_8"
                    android:textColor="@color/normal_text"
                    android:textSize="@dimen/login_text"
                    />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"

                >

                <CheckBox
                    android:id="@+id/checkBox_autoLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/autologin"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/login_text"/>

                <TextView
                    android:id="@+id/textView_forgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/forgetPassword"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/login_text"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/textView_login"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:background="@drawable/button_common"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="top"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center"
                    android:text="http://"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/editText_url"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:hint="IP地址和端口号"
                    android:textSize="16sp"/>
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBox_url"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="使用192.168.11.125:8080/school/"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
