<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.cnst.wisdom.ui.activity.TeachPlan">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/width_40"
            android:src="@mipmap/back"
            android:padding="@dimen/padding_15"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_gravity="center"
            android:textSize="@dimen/text_18"
            android:padding="@dimen/padding_10"
            android:text="@string/title_activity_teach_plan"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_marginRight="@dimen/width_10"
            android:layout_height="match_parent"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/teach_plan_subject"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_56"
        android:background="@drawable/button_selector_gray"
        android:clickable="true">

        <ImageView
            android:layout_width="@dimen/width_42"
            android:layout_height="@dimen/width_42"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/padding_20"
            android:layout_marginRight="@dimen/padding_10"
            android:src="@mipmap/teach_subject"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/teach_subject"
            android:textColor="@color/normal_text"
            android:textSize="@dimen/text_16"/>

        <ImageView
            android:layout_width="@dimen/width_40"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_15"
            android:src="@mipmap/nextarrow"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/underline_gray"/>

    <LinearLayout
        android:id="@+id/teach_plan_progress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_56"
        android:background="@drawable/button_selector_gray"
        android:clickable="true">

        <ImageView
            android:layout_width="@dimen/width_42"
            android:layout_height="@dimen/width_42"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/padding_20"
            android:layout_marginRight="@dimen/padding_10"
            android:src="@mipmap/teach_progress"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/teach_progress"
            android:textColor="@color/normal_text"
            android:textSize="@dimen/text_16"/>

        <ImageView
            android:layout_width="@dimen/width_40"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_15"
            android:src="@mipmap/nextarrow"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/underline_gray"/>

    <LinearLayout
        android:id="@+id/teach_plan_mof"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_56"
        android:background="@drawable/button_selector_gray"
        android:clickable="true">

        <ImageView
            android:layout_width="@dimen/width_42"
            android:layout_height="@dimen/width_42"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/padding_20"
            android:layout_marginRight="@dimen/padding_10"
            android:src="@mipmap/mod_plan"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/mof_plan"
            android:textColor="@color/normal_text"
            android:textSize="@dimen/text_16"/>

        <ImageView
            android:layout_width="@dimen/width_40"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_15"
            android:src="@mipmap/nextarrow"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/underline_gray"/>
</LinearLayout>