<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@android:color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/width_40"
            android:src="@mipmap/back"
            android:padding="@dimen/padding_15"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_gravity="center"
            android:textSize="@dimen/text_18"
            android:padding="@dimen/padding_10"
            android:text="@string/mof_plan"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_marginRight="@dimen/width_10"
            android:layout_height="match_parent"/>
    </FrameLayout>

    <LinearLayout
        android:background="@color/white"
        android:paddingTop="@dimen/padding_1"
        android:id="@+id/dialog_sel_rg"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_40">
        <LinearLayout
            android:id="@+id/teach_progress_clazz"
            android:gravity="center"
            android:clickable="true"
            android:layout_width="0dp"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:layout_weight="1">
        <TextView
            android:gravity="center"
            android:padding="@dimen/padding_10"
            android:textColor="@color/normal_text"
            android:text="@string/atten_class"
            android:layout_width="0dp"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_16"/>
        <ImageView
            android:layout_width="@dimen/width_10"
            android:src="@mipmap/down"
            android:layout_margin="@dimen/padding_15"
            android:layout_height="match_parent"/>
        </LinearLayout>
        <View
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginBottom="@dimen/margin_5"
            android:background="@color/underline_gray"
            android:layout_width="@dimen/width_1"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:id="@+id/teach_progress_subject"
            android:gravity="center"
            android:clickable="true"
            android:layout_width="0dp"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:layout_weight="1">
        <TextView
            android:gravity="center"
            android:padding="@dimen/padding_10"
            android:textColor="@color/normal_text"
            android:text="@string/subject"
            android:layout_width="0dp"
            android:background="@null"
            android:textSize="@dimen/text_16"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="@dimen/width_10"
            android:src="@mipmap/down"
            android:layout_margin="@dimen/padding_15"
            android:layout_height="match_parent"/>
            </LinearLayout>
        <View
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginBottom="@dimen/margin_5"
            android:background="@color/underline_gray"
            android:layout_width="@dimen/width_1"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:id="@+id/teach_progress_periods"
            android:gravity="center"
            android:clickable="true"
            android:layout_width="0dp"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:layout_weight="1">
        <TextView
            android:background="@null"
            android:gravity="center"
            android:padding="@dimen/padding_10"
            android:textColor="@color/normal_text"
            android:text="@string/term"
            android:layout_width="0dp"
            android:textSize="@dimen/text_16"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="@dimen/width_10"
            android:src="@mipmap/down"
            android:layout_margin="@dimen/padding_15"
            android:layout_height="match_parent"/>
            </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E2E2E2"/>
    <ListView
        android:id="@+id/teach_progress_sel_list"
        android:divider="@color/underline_gray"
        android:dividerHeight="@dimen/width_1"
        android:layout_width="match_parent"
        android:listSelector="@color/onClick"
        android:layout_height="match_parent"/>
</LinearLayout>